cmake_minimum_required(VERSION 3.14)

project(SensorReadoutParser LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# PROJECT SETTINGS
option(WITH_TESTS "Whether to build tests" OFF)

# LIBRARY
set(SENSORREADOUTPARSER_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
file(GLOB SENSORREADOUTPARSER_SOURCES "src/*.cpp")
file(GLOB_RECURSE SENSORREADOUTPARSER_HEADERS "${SENSORREADOUTPARSER_INCLUDE_DIR}/*.h")
add_library(SensorReadoutParser SHARED ${SENSORREADOUTPARSER_SOURCES} ${SENSORREADOUTPARSER_HEADERS})
target_include_directories(SensorReadoutParser PUBLIC "include/")
target_compile_definitions(SensorReadoutParser PRIVATE SENSORREADOUTPARSER_LIBRARY)

# UNIT TESTS
if(WITH_TESTS)
	add_subdirectory(test)
endif()
